# CallSim

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README.txt  pseudocode.txt  turnstile.cpp  turnstile.h  turnstileApp.cpp
Client/: CMakeLists.txt
Client/inc/: UiController.h  clientFsm.h  clientTransport.h
Client/src/: UiController.cpp  clientFsm.cpp  clientTransport.cpp  main.cpp
Client/test/: connectedStateTest.cpp  mockStateMachine.h  registeredStateTest.cpp
Server/: CMakeLists.txt
Server/inc/: server.h  session.h  sessionFsm.h
Server/src/: main.cpp  server.cpp  session.cpp  sessionFsm.cpp
Server/test/: connectedStateTest.cpp  mockSession.h  registeredStateTest.cpp
echo/: CMakeLists.txt
echo/client/: client.cpp  client.h  clientFsm.cpp  clientFsm.h  keyboard.cpp  keyboard.h  main.cpp  uiController.cpp  uiController.h
echo/proto/: CMakeLists.txt  message.proto  messageBuilder.h
echo/server/: main.cpp  server.cpp  server.h  session.cpp  session.h  sessionFsm.cpp  sessionFsm.h
proto/: CMakeLists.txt  messageBuilder.h
test/: CMakeLists.txt  turnstile_test.cpp
turnstileEnum/: CMakeLists.txt  turnstile.h  turnstileApp.cpp  turnstileSwitch.h
turnstileEnum/test/: CMakeLists.txt  turnstile_test.cpp
turnstileOOP/: CMakeLists.txt  turnstileOOP.cpp  turnstileOOP.h  turnstileOOPApp.cpp
turnstileOOP/test/: CMakeLists.txt  turnstileOOPTest.cpp
